Fix scrollbar

--- a/src/browser_action/ethsbell.css
+++ b/src/browser_action/ethsbell.css
@@ -2,7 +2,7 @@
 	width: 100%;
 	height: 100%;
 	overflow-x: hidden;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 body {
